--- a/semana03/semana02/index.html
+++ b/semana03/semana02/index.html
@@ -5,6 +5,6 @@
         <title>Página de Prueba</title> 
     </head> 
     <body> 
-        <h1>Hola, Mundo</h1>
+        <h1>Hola, Mundo real</h1>
     </body> 
 </html>
